# Homeworks

./: .gitignore  README.md  pyproject.toml
Homework-15/: Dockerfile  docker-compose.yml  pyproject.toml
Homework-15/simple_app/: db.sqlite3
Homework-15/simple_app/hello/: views.py
Homework-15/simple_app/players/: models.py
Homework-15/simple_app/simple_app/: asgi.py  settings.py  wsgi.py
Homework-15_16/simple_app/: db.json  pyproject.toml
Homework-19/tasks_manage/: pyproject.toml  План проекта - Менеджер задач.docx
Homework-19/tasks_manage/tasks_manage/: manage.py
lecture/: file.py  pyproject.toml
lecture/classes/: association.py  inheritance.py  methods.py  mro.py  multi_inheritance.py  properties.py
lecture/classes/DTO/: __init__.py  attrs.py  class.py  dataclass.py  named_tuple.py  pydantiс.py  typed_dict.py
lecture/classes/SOLID/: dip_right.py  dip_wrong.py  isp_right.py  isp_wrong.py  lsp_right.py  lsp_wrong.py  ocp_right.py  ocp_wrong.py  srp_right.py  (+1 more)
lecture/conditions/: file1.py
lecture/dicts/: file.py
lecture/exceptions/: file.py
lecture/files/: abc.txt  file.py  foo.txt
lecture/for/: file.py
lecture/funcs/: annotations.py  args.py  closure.py  decorator.py  func.py  recursion.py  scope.py
lecture/html/: example.html
lecture/iter/: file.py
lecture/lists/: file.py
lecture/my_app/: .env
lecture/pizza_app/: db.sqlite3
lecture/serializers/: file.py
lecture/sets/: file.py
lecture/spaceoftanks/: docker-compose.yml  pyproject.toml
lecture/strings/: file1.py
lecture/tuples/: file.py
lecture/while/: file.py
(+530 files in other folders)
