[tool.poetry]
name = "simple-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.9"
faker = "^23.2.1"
django = "3.2.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
