[tool.poetry]
name = "lecture"
version = "0.1.0"
description = ""
authors = ["Dmitry"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "<2.0.0"
attrs = "23.2.0"
pytest = "^8.1.1"
funcy = "^2.0"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
